--- a/ODK.Web.Razor/Views/Shared/Events/_EventSidebar.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Events/_EventSidebar.cshtml
@@ -39,7 +39,7 @@
         </div>
     }
 
-    @if (Model.CurrentMember?.IsMemberOf(Model.Chapter.Id) == true)
+    @if (Model.CanRespond && Model.CurrentMember != null)
     {
         if (Model.Event.TicketSettings != null)
         {
