--- a/ODK.Web.Razor/wwwroot/css/_forms.scss
+++ b/ODK.Web.Razor/wwwroot/css/_forms.scss
@@ -17,6 +17,14 @@
 	}
 }
 
+.form-horizontal {
+	.form-label {
+		margin-bottom: 0;
+		text-align: right;
+		align-self: center;
+	}
+}
+
 .form-label {
 	font-weight: var(--odk-forms-labels-font-weight);
 }
