--- a/ODK.Web.Razor/wwwroot/css/main.css
+++ b/ODK.Web.Razor/wwwroot/css/main.css
@@ -12132,6 +12132,12 @@ html[data-platform=odk] {
   width: auto;
 }
 
+.form-horizontal .form-label {
+  margin-bottom: 0;
+  text-align: right;
+  align-self: center;
+}
+
 .form-label {
   font-weight: var(--odk-forms-labels-font-weight);
 }
