--- a/ODK.Web.Razor/Pages/SuperAdmin/_SuperAdminLayout.cshtml
+++ b/ODK.Web.Razor/Pages/SuperAdmin/_SuperAdminLayout.cshtml
@@ -12,6 +12,7 @@
     new MenuItem { Link = "/superadmin/errors", Text = "Error log" },
     new MenuItem { Link = "/superadmin/features", Text = "Features" },
     new MenuItem { Link = "/superadmin/groups", Text = "Groups" },
+    new MenuItem { Link = "/superadmin/payments", Text = "Payments" },
     new MenuItem { Link = "/superadmin/subscriptions", Text = "Subscriptions" }
 })
 
