--- a/ODK.Web.Razor/Views/Shared/Admin/Members/_SendMemberEmailContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Members/_SendMemberEmailContent.cshtml
@@ -5,9 +5,8 @@
 
 @await Html.PartialAsync("Admin/Members/_MemberAdminTabs", Model)
 
-@await Html.PartialAsync("Components/_RestrictedFeature", new RestrictedFeatureViewModel
+@await Html.PartialAsync("Components/_RestrictedFeature", new RestrictedFeatureViewModel(Model.Chapter)
 {
-    Chapter = Model.Chapter,
     ContentFunc = 
         @<div>
             <form method="post" action="/my/groups/@Model.Chapter.Id/members/@Model.Member.Id/emails/send">
