--- a/ODK.Web.Razor/Views/Shared/Site/_SiteAlerts.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Site/_SiteAlerts.cshtml
@@ -14,9 +14,16 @@
         ? await ChapterService.GetChaptersByOwnerId(memberId.Value)
         : [];
 
-    // do not show pending publication alert on the group page itself
+    var currentChapterPendingPublication = ownedChapters
+        .Where(x => x.CanBePublished() &&
+            (HttpContextAccessor.ForPath(OdkRoutes2.MemberGroups.Group(x.Id)) ||
+            HttpContextAccessor.ForPath(OdkRoutes2.Groups.Group(x))))
+        .FirstOrDefault();
+
     var chaptersPendingPublication = ownedChapters
-        .Where(x => x.CanBePublished() && !HttpContextAccessor.ForPath(OdkRoutes2.MemberGroups.Group(x.Id)))
+        .Where(x => x.CanBePublished() && 
+            !HttpContextAccessor.ForPath(OdkRoutes2.MemberGroups.Group(x.Id)) &&
+            !HttpContextAccessor.ForPath(OdkRoutes2.Groups.Group(x)))
         .ToArray();
 }
 
@@ -25,5 +32,13 @@
     <div class="page-alert alert alert-warning">
         You have @chaptersPendingPublication.Length @StringUtils.Pluralise(chaptersPendingPublication.Length, "chapter") waiting to be published.
         <a href="@OdkRoutes2.MemberGroups.Index()">My groups</a>
+    </div>
+}
+
+@if (currentChapterPendingPublication != null)
+{
+    <div class="page-alert alert alert-warning">
+        This group is not published.
+        <a href="@OdkRoutes2.MemberGroups.Group(currentChapterPendingPublication.Id)">Publish</a>
     </div>
 }
