--- a/ODK.Web.Razor/Views/Shared/Account/_SiteSubscriptionContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Account/_SiteSubscriptionContent.cshtml
@@ -95,6 +95,11 @@
                             <div class="d-flex flex-column gap-3">
                                 @foreach (var price in prices)
                                 {
+                                    if (price.ExternalId == null)
+                                    {
+                                        continue;
+                                    }
+
                                     var modalId = $"payment-modal-upgrade-{price.Id}";
                                     var periodUnit = price.Frequency.PeriodUnit();
 
