--- a/ODK.Web.Razor/Pages/Groups/Index.cshtml
+++ b/ODK.Web.Razor/Pages/Groups/Index.cshtml
@@ -105,7 +105,7 @@
                     else
                     {
                         <p>
-                            No matching results. <a href="@OdkRoutes2.MemberGroups.Create()">Create a group</a>
+                            No matching results. <a href="@OdkRoutes2.MemberGroups.GroupCreate()">Create a group</a>
                         </p>
                     }
                 </div>
