--- a/ODK.Web.Razor/Pages/My/Groups/GroupCreate.cshtml
+++ b/ODK.Web.Razor/Pages/My/Groups/GroupCreate.cshtml
@@ -8,7 +8,7 @@
 @using ODK.Web.Razor.Models.Account
 @using ODK.Web.Razor.Models.Chapters
 @using ODK.Web.Razor.Models.Components
-@model CreateModel
+@model GroupCreateModel
 @inject IChapterViewModelService ChapterViewModelService
 @{
     Layout = "_HomeLayout";
