--- a/ODK.Web.Razor/Views/Shared/Admin/Events/_EventAdminTabs.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Events/_EventAdminTabs.cshtml
@@ -1,4 +1,5 @@
-﻿@model ODK.Web.Razor.Models.Admin.Events.EventViewModel
+﻿@using ODK.Services.Events.ViewModels
+@model EventAdminPageViewModelBase
 
 <ul class="nav nav-tabs my-3">
     <li class="nav-item">
