--- a/ODK.Web.Razor/Views/Shared/Admin/Events/_EventForm.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Events/_EventForm.cshtml
@@ -2,6 +2,7 @@
 @using ODK.Services
 @using ODK.Services.Venues
 @using ODK.Web.Common.Extensions
+@using ODK.Web.Common.Routes
 @using ODK.Web.Razor.Models.Components
 @model ODK.Web.Razor.Models.Admin.Events.EventFormViewModel
 @inject IVenueAdminService VenueAdminService
