--- a/ODK.Web.Razor/Views/Shared/Header/_SiteAccountMenu.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Header/_SiteAccountMenu.cshtml
@@ -23,7 +23,7 @@
                     <span>My groups</span>
                 </a>
 
-                <a class="dropdown-item dropdown-item--icon" href="@OdkRoutes2.MemberGroups.Create()">
+                <a class="dropdown-item dropdown-item--icon" href="@OdkRoutes2.MemberGroups.GroupCreate()">
                     <span class="icon">
                         <i class="fa-solid fa-plus"></i>
                     </span>
