--- a/ODK.Web.Razor/Pages/My/Groups/Events/Event.cshtml
+++ b/ODK.Web.Razor/Pages/My/Groups/Events/Event.cshtml
@@ -1,19 +1,16 @@
-﻿@page "/{chapterName}/Admin/Events/{id:guid}"
+﻿@page "/my/groups/{id:guid}/events/{eventId:guid}"
 @using ODK.Services
 @using ODK.Services.Events
 @using ODK.Web.Common.Components
-@using ODK.Web.Common.Extensions
 @using ODK.Web.Common.Routes
 @using ODK.Web.Razor.Models.Components
-@model ODK.Web.Razor.Pages.Chapters.Admin.Events.EventModel
+@model ODK.Web.Razor.Pages.My.Groups.Events.EventModel
 @inject IEventAdminService EventAdminService
 @{
-    Layout = "Admin/Events/_EventAdminLayout";
-    Model.Title = "Edit Event | Admin";
+    Layout = "_HomeLayout";
 
-    var memberId = User.MemberId();
-    var serviceRequest = new AdminServiceRequest(Model.Chapter.Id, memberId);
-    var viewModel = await EventAdminService.GetEventEditViewModel(serviceRequest, Model.Event.Id);
+    var request = new AdminServiceRequest(Model.ChapterId, Model.CurrentMemberId);
+    var viewModel = await EventAdminService.GetEventEditViewModel(request, Model.EventId);
 }
 
 @await Html.PartialAsync("Components/_Body", new BodyViewModel
