--- a/ODK.Web.Razor/Views/Shared/Admin/Events/_EventAttendeesContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Events/_EventAttendeesContent.cshtml
@@ -1,22 +1,10 @@
 ﻿@using ODK.Core.Events
-@using ODK.Core.Members
-@using ODK.Services
-@using ODK.Services.Events
-@using ODK.Services.Members
-@using ODK.Web.Common.Extensions
+@using ODK.Services.Events.ViewModels
 @using ODK.Web.Razor.Models.Events
 @using ODK.Web.Razor.Models.Members
-@model ODK.Web.Razor.Models.Admin.Events.EventViewModel
-@inject IEventAdminService EventAdminService
-@inject IMemberAdminService MemberAdminService
+@model EventAttendeesAdminPageViewModel
 @{
-    var memberId = User.MemberId();
-    var request = new AdminServiceRequest(Model.Chapter.Id, memberId);
-    var dto = await EventAdminService.GetEventResponsesDto(request, Model.Event.Id);
-
-    var (members, responses) = (dto.Members, dto.Responses);
-
-    var responsesDictionary = responses
+    var responseDictionary = Model.Responses
         .ToDictionary(x => x.MemberId, x => x.Type);
 }
 
@@ -24,9 +12,9 @@
 @await Html.PartialAsync("Admin/Events/_EventAdminTabs")
 
 <div class="row row-cols-3 row-cols-md-6">
-    @foreach (var member in members.OrderBy(x => x.FullName))
+    @foreach (var member in Model.Members.OrderBy(x => x.FullName))
     {
-        responsesDictionary.TryGetValue(member.Id, out EventResponseType response);
+        responseDictionary.TryGetValue(member.Id, out var response);
 
         <div class="col text-center overlay-container mb-3">
             <div class="d-flex align-items-end justify-content-center">
