--- a/ODK.Web.Razor/Views/Shared/Admin/Events/_EventCreateContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Events/_EventCreateContent.cshtml
@@ -1,22 +1,17 @@
 ﻿@using ODK.Core.Utils
 @using ODK.Services
-@using ODK.Services.Chapters
 @using ODK.Services.Events
 @using ODK.Web.Common.Extensions
 @using ODK.Web.Razor.Models.Admin.Events
 @using ODK.Web.Razor.Models.Components
 @model ODK.Core.Chapters.Chapter
-@inject IChapterAdminService ChapterAdminService
 @inject IEventAdminService EventAdminService
 @{
     var memberId = User.MemberId();
-    var request = new AdminServiceRequest(Model.Id, memberId);
-    var settings = await ChapterAdminService.GetChapterEventSettings(request);
-    var nextEventDate = await EventAdminService.GetNextAvailableEventDate(request);
-    var chapterAdminMembers = await ChapterAdminService.GetChapterAdminMembers(request);
-    var chapterPaymentSettings = await ChapterAdminService.GetChapterPaymentSettings(request);
+    var request = new AdminServiceRequest(Model.Id, memberId);    
+    var viewModel = await EventAdminService.GetEventCreateViewModel(request);
 
-    var hostOptions = chapterAdminMembers
+    var hostOptions = viewModel.AdminMembers
         .Select(x => new SelectListItem
         {
             Value = x.MemberId.ToString(),
@@ -34,11 +29,13 @@
     {
         ChapterId = Model.Id,
         ChapterName = Model.Name,
-        CurrencySymbol = chapterPaymentSettings?.Currency.Symbol,
-        Date = nextEventDate,
-        Description = settings?.DefaultDescription,
-        EndTime = TimeSpanUtils.ToString(settings?.DefaultEndTime),
-        HostOptions = hostOptions
+        CurrencySymbol = viewModel.PaymentSettings?.Currency.Symbol,
+        Date = viewModel.Date,
+        Description = viewModel.EventSettings?.DefaultDescription,
+        EndTime = TimeSpanUtils.ToString(viewModel.EventSettings?.DefaultEndTime),
+        HostOptions = hostOptions,
+        OwnerSubscription = viewModel.OwnerSubscription,
+        Venues = viewModel.Venues
     })
     
     <div class="button-container">
