--- a/ODK.Web.Razor/Views/Shared/Admin/Events/_EventForm.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Events/_EventForm.cshtml
@@ -1,16 +1,10 @@
-﻿@using ODK.Core.Venues
-@using ODK.Services
-@using ODK.Services.Venues
+﻿@using ODK.Core.Features
 @using ODK.Web.Common.Extensions
 @using ODK.Web.Common.Routes
 @using ODK.Web.Razor.Models.Components
 @model ODK.Web.Razor.Models.Admin.Events.EventFormViewModel
-@inject IVenueAdminService VenueAdminService
-@{
-    var memberId = User.MemberId();
-    var request = new AdminServiceRequest(Model.ChapterId, memberId);
-    var venues = await VenueAdminService.GetVenues(request);
-    var venueOptions = venues
+@{    
+    var venueOptions = Model.Venues
         .OrderBy(x => x.Name)
         .Select(x => new SelectListItem { Value = x.Id.ToString(), Text = x.Name })
         .ToArray();
@@ -111,14 +105,9 @@
     @Html.ValidationMessageFor(x => x.AttendeeLimit)
 </div>
 
-<fieldset>
+<fieldset disabled="@(Model.OwnerSubscription?.HasFeature(SiteFeatureType.EventTickets) != true ? "" : null)">
     <legend>
         Tickets
-        @await Html.PartialAsync("Components/_FeatureTooltip", 
-            new FeatureTooltipViewModel 
-            {
-                Name = "Events.Tickets"
-            })
     </legend>
     <div class="form-group mb-3">
         @Html.LabelFor(x => x.TicketCost, new { @class = "form-label" })
